# SCHOOL_INCOME

./: .env.example  .gitignore  CLAUDE.md  EXECUTION_PLAN.md  mvp_description.md  pyproject.toml
data/processed/: schools_wa.json  search_index.json
docs/: schema.md
pipeline/: brackets.py  build_dataset.py  download.py  io.py  validate.py
pipeline/download/: __init__.py  __main__.py  acs.py  ccd.py  sabs.py  tiger.py
site/: app.js  index.html  style.css
tests/: conftest.py  test_smoke.py
tests/fixtures/: acs_b19131_sample.json  ccd_sample.csv
tests/pipeline/: test_brackets.py  test_interpolate.py  test_io.py  test_join_ccd.py  test_low_confidence.py  test_main.py  test_serialize.py  test_summary_stats.py
tests/pipeline/download/: test_acs.py  test_ccd.py  test_orchestrator.py  test_sabs.py  test_tiger.py
tests/site/: test_fixture_schema.py  test_html.py
